# DotnetWebExportDemo

./: .gitignore  .gitmodules  README.md  run
cpp_project/: .clang-format  .clangd  CMakeLists.txt  export_presets.cfg  project.godot
cpp_project/cmake/: PackageWeb.cmake
cpp_project/src/: libgodot.h  main.cpp  player.cpp  player.hpp
cpp_project_gdext/: .clangd  .gitignore  CMakeLists.txt  export_presets.cfg  main.tscn  run
cpp_project_gdext/src/: main.cpp  player.cpp  player.hpp
csharp_project/: .gitignore  CSharpSample.csproj  CSharpSample.sln  Main.cs  Main.cs.uid  Main.tscn  Player.cs  Player.cs.uid  Player.tscn  export_presets.cfg  icon.svg.import  nuget.config  project.godot
